objects/Mm_Private_Lesson_Monthly_Cost_Snapshot__c.object
<CustomObject><fields>
        <fullName>Music_Monthly_Total_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Music Monthly Total Cost</description>
        <inlineHelpText>Music Monthly Total Cost</inlineHelpText>
        <label>Music Monthly Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Report_Month__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Report Month</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Tennis_Monthly_Total_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tennis Monthly Total Cost</description>
        <inlineHelpText>Tennis Monthly Total Cost</inlineHelpText>
        <label>Tennis Monthly Total Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Mm Private Lesson Monthly Cost Snapshots tracking object</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Mm Private Lesson Monthly Cost Snapshot</label><nameField>
        <label>Mm Private Lesson Monthly Cost Snapshot Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Mm Private Lesson Monthly Cost Snapshots</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>